--- a/bmw/assets/stylesheets/main.css
+++ b/bmw/assets/stylesheets/main.css
@@ -25,6 +25,7 @@ a:hover {
     width: 60%;
     text-align: center;
     padding-top: 10px;
+    z-index: 10;
 }
 
 #header .logo img {
@@ -40,6 +41,27 @@ a:hover {
     font-size: 10px;
 }
 
+@media(max-width:1200px) {
+    #header .logo {
+        width: 80%;
+    }
+}
+
+@media(max-width:992px) {
+    #header .logo {
+        width: 100%;
+    }
+}
+
+@media(max-width:768px) {
+    #header .container {
+        width: 100%;
+    }
+    #header .logo img {
+        right: 10px;
+    }
+}
+
 #main-navigation ul li {
     margin: 0px 15px 0px 0px;
 }
@@ -48,4 +70,97 @@ a:hover {
     display: block;
     padding: 22px 0px;
     color: #000;
+}
+
+@media(max-width:992px) {
+    #main-navigation ul li {
+        margin: 0px 10px 0px 0px;
+        font-size: 14px;
+    }
+}
+
+@media(max-width:768px) {
+    #main-navigation ul {
+        display: none;
+    }
+}
+
+#banner {
+    position: relative;
+}
+
+#banner .desc {
+    position: absolute;
+    left: 5%;
+    top: 18%;
+    width: 78%;
+}
+
+#banner h3,
+#banner h1 {
+    color: #fff;
+}
+
+#banner h1 {
+    font-family: 'Gill Sans', 'Trebuchet MS', sans-serif;
+    font-size: 58px;
+    font-weight: normal;
+    margin-bottom: 20px;
+}
+
+#banner .btn-1 {
+    border: 1px solid #fff;
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+    width: 200px;
+    color: #fff;
+}
+
+@media(max-width:768px) {
+    #banner h1 {
+        font-size: 24px;
+    }
+}
+
+#section_1 {
+    padding: 50px 0px;
+    background-color: #262626;
+}
+
+#section_1 h2 {
+    color: #fff;
+    font-size: 40px;
+    margin-bottom: 70px;
+    font-weight: normal;
+}
+
+#section_1 .slide {
+    text-align: center;
+    margin: 0px 20px;
+    width: 15%;
+}
+
+#section_1 .slide .image {
+    height: 170px;
+    border-radius: 50%;
+    border: 4px solid #fff;
+    padding: 2px;
+    position: relative;
+    overflow: hidden;
+}
+
+#section_1 .slide a {
+    color: #fff;
+    display: block;
+}
+
+#section_1 .slide img {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
 }
