--- a/Javascript/MusicApp/assets/stylesheets/custom.css
+++ b/Javascript/MusicApp/assets/stylesheets/custom.css
@@ -43,3 +43,31 @@ h2 {
 #songsList li img {
     height: 200px;
 }
+
+#sidebar {
+    position: sticky;
+    top: 120px;
+    width: 100%;
+}
+
+#playList {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+}
+
+#playList li {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid red;
+    cursor: pointer;
+}
+
+#playList li img {
+    width: 20% !important;
+    margin-right: 20px;
+    max-height: 60px;
+}
